# youtube-clipper

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  borralo  docker-compose.yml  drizzle.config.ts  next.config.js  package-lock.json  package.json  start-database.sh  tsconfig.json
processor/: Dockerfile  docker-compose.yaml  output.json  pyproject.toml
processor/processor/: addSubtitlestoClip.py  clipUpdated.py  createSubtitles.py  createSuggestions.py  extractInterventions.py  extractWords.py  extractWordsFromFile.py  fileHandler.py  flask_server.py  generateClip.py  main.py  models.py  openAiModel.py  processSource.py  s3FileHandlers.py  startTranscription.py  system.py  transcriptionHandler.py  utils.py
processor/processor/application/generateClip/: addSubtitlestoClip.py  extractInterventions.py  generateClip.py
processor/processor/application/processSource/: createSuggestions.py  extractWordsFromFile.py  processSource.py
processor/processor/clip/: Clip.py  clipRepository.py
processor/processor/entities/clip/: Clip.py  (+2 more)
processor/processor/event/: Event.py  eventRepository.py
processor/processor/generateClip/: addSubtitlestoClip.py  extractInterventions.py  generateClip.py
processor/processor/processSource/: createSuggestions.py  extractWordsFromFile.py  processSource.py
processor/processor/source/: Source.py  eventRepository.py  sourceRepository.py
processor/processor/startTranscription/: startTranscription.py
processor/processor/suggestion/: Suggestion.py  suggestionRepository.py
processor/src/: main.py  models.py  test.py
(+396 files in other folders)
